@@ -48,7 +48,7 @@ public class MediaGroup extends MediaType{
 
     private List<InputMedia> applyCaption(List<InputMedia> media, Send parent, ResourcePool pool){
         assert media.size() > 1;
-        InputMedia first = media.get(0);
+        InputMedia first = media.getFirst();
         first.setCaption(parent.getText() != null ? parent.getText().generateText(pool) : null);
         first.setCaptionEntities(parent.getText() != null ? generateNullableProperty(parent.getText().getEntities(), List.of(), pool) : List.of());
         first.setParseMode(parent.getText() != null ? generateNullableProperty(parent.getText().getParseMode(), pool) : null);
